WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256399
[UI-side compositing] Guard against UI process hangs caused by incorrect frame rate data
https://bugs.webkit.org/show_bug.cgi?id=256399
Summary
[UI-side compositing] Guard against UI process hangs caused by incorrect fram...
Simon Fraser (smfr)
Reported
2023-05-05 15:02:56 PDT
There's some evidence of a UI-process (i.e. Safari) hang caused by RemoteLayerTreeEventDispatcher::waitForRenderingUpdateCompletionOrTimeout() taking too long. This could happen if m_stateCondition.waitUntil() has a long timeout, so impose a cap of 32ms on that timeout.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-05-05 15:03:16 PDT
<
rdar://108954321
>
Simon Fraser (smfr)
Comment 2
2023-05-05 15:09:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13525
EWS
Comment 3
2023-05-08 11:18:39 PDT
Committed
263806@main
(3f7af1859b92): <
https://commits.webkit.org/263806@main
> Reviewed commits have been landed. Closing PR #13525 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug