[UI-side compositing] Guard against UI process hangs caused by incorrect frame rate data https://bugs.webkit.org/show_bug.cgi?id=256399 rdar://108954321

Reviewed by Chris Dumez.

The spin report in the radar suggests that the Safari main thread is blocked on
RemoteLayerTreeEventDispatcher::mainThreadDisplayDidRefresh() because the scrolling thread
is stuck in RemoteLayerTreeEventDispatcher::waitForRenderingUpdateCompletionOrTimeout().
The only way this can happen is that we send a long timeout to m_stateCondition.waitUntil(),
but this timeout should be at most half of the frame duration.

So protect against bad m_scrollingTree->frameDuration() data by imposing a cap
at at most 32ms on this timeout, and release log if it seems wrong.

* Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteLayerTreeEventDispatcher.cpp:
(WebKit::RemoteLayerTreeEventDispatcher::waitForRenderingUpdateCompletionOrTimeout):

Canonical link: https://commits.webkit.org/263806@main